tests/compile_fail/attempt_at_unhygienic_access.rs
use caching::caching;

#[caching(key_type = bool, key_expr = a)]
fn f(a: bool) -> bool {
    key
}

fn main() {}
